<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/page_1"/>
    <item
        android:id="@+id/navigation_cart"
        android:enabled="true"
        android:icon="@drawable/baseline_shopping_cart_24"
        android:title="@string/page_2"/>
    <item
        android:id="@+id/navigation_history"
        android:enabled="true"
        android:icon="@drawable/baseline_history_24"
        android:title="@string/page_3"/>
    <item
        android:id="@+id/navigation_settings"
        android:enabled="true"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/page_4"/>
</menu>