<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_titulo" />

    <TextView
        style="@style/Titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_tit" />

    <TextView
        style="@style/Subtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_subTit" />

    <TextView
        style="@style/TextoPrincipal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_titulo" />

    <TextView
        style="@style/TextoSecundario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_titulo" />

    <TextView
        style="@style/TextoAyuda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_titulo" />

</LinearLayout>