<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ajust_titulo"
        style="@style/Titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginTop="16dp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llTema"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:foreground="?attr/selectableItemBackground">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ajust_tema"
                style="@style/TextoPrincipal"
                android:layout_gravity="center_vertical"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:paddingHorizontal="16dp">
            <TextView
                android:id="@+id/tvSilencio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ajust_silencio"
                style="@style/TextoPrincipal"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/switch_silencio" />
            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switch_silencio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/descripcion_switch_silencio" />
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/llOptions"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:paddingHorizontal="16dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ajust_vibracion"
                style="@style/TextoPrincipal"
                />
            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switch_vibracion"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>